--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   background-color: #f8f4ff;
   width: 825px;
   margin: 50px auto;
+  position: relative;
 }
 .title {
   font-size: 32px;
@@ -27,6 +28,21 @@
   font-size: 44px;
 }
 
+.sale {
+  background-color: #ec2f2f;
+  color: #fff;
+  font-size: 24px;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 7px 15px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 22px;
+  position: absolute;
+  top: -22px;
+  left: -55px;
+  letter-spacing: 4px;
+}
 .shipping {
   font-size: 24px;
   text-transform: uppercase;
@@ -43,6 +59,31 @@
   text-decoration: none;
 }
 
+.color {
+  background-color: #000;
+  height: 22px;
+  width: 22px;
+  display: inline-block;
+  margin-right: 12px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.color-blue {
+  background-color: #2f6ee2;
+}
+.color-red {
+  background-color: #ec2f2f;
+}
+.color-yellow {
+  background-color: #f0bf10;
+}
+.color-green {
+  background-color: #90cc20;
+}
+.color-brown {
+  background-color: #885214;
+}
 .details-title {
   text-transform: uppercase;
   font-size: 24px; 
