--- a/style.css
+++ b/style.css
@@ -4,14 +4,10 @@
   box-sizing: border-box;
 }
 
-.clearfix::after{
-  content: '';
-  display: block;
-  clear: both;
-}
-
 .container {
   /* background-color: red; */
+  display: flex;
+  gap: 40px;
 }
 .article {
   border: 4px solid #534564;
@@ -33,8 +29,7 @@
 
 .image {
   border-radius: 22px;
-  float: left;
-  margin-right: 40px;
+  
 }
 
 .price {
@@ -68,19 +63,23 @@
 
 .more-info:link, .more-info:visited{
   color: black;
+  margin-bottom: 20px;
+  display: block;
 }
 
 .more-info:hover , .more-info:active{
   text-decoration: none;
 }
 
+.product-colors {
+  display: flex;
+  gap: 12px;
+}
+
 .color {
   background-color: #000;
   height: 22px;
   width: 22px;
-  display: inline-block;
-  margin-right: 12px;
-  margin-top: 20px;
   cursor: pointer;
 }
 
@@ -134,13 +133,13 @@
 }
 
 .peroperties {
-  float: left;
-  width: 243px;
-  margin-right: 40px;
+  /* width: 243px; */
+  
   margin-top: 20px;
+  flex: 1;
 }
 
 .details {
-  float: right;
-  width: 243px;
+  /* width: 243px; */
+  flex: 1;
 }
