--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@
   box-sizing: border-box;
 }
 
-.container {
-  /* background-color: red; */
-  display: flex;
-  gap: 40px;
-}
+
 .article {
+  display: grid;
+  grid-template-columns: 250px 1fr 1fr;
+  column-gap: 40px;
+
   border: 4px solid #534564;
   background-color: #f8f4ff;
   width: 825px;
@@ -25,6 +25,8 @@
   font-weight: bold;
   color: #534564;
   padding: 15px;
+
+grid-column: 1 / -1;
 }
 
 .image {
@@ -124,6 +126,8 @@
   cursor: pointer;
   padding: 15px;
   width: 100%;
+
+  grid-column: 1 / -1;
 }
 
 .add-cart:hover {
